# pyocctlite

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  environment.yml
.junie/: guidelines.md
docs/: environment.yml
docs/source/: about.rst  conf.py  geometry.rst  index.rst  install.rst  mesh.rst  primitives.rst  topology.rst
examples/: bottle.py
pyocctlite/: geometry.py  mesh.py  primitives.py  topology.py
src/: CopyIShape.cpp  CopyIShape.hpp  CutIShapes.cpp  CutIShapes.hpp  ExploreIShape.cpp  ExploreIShape.hpp  ExtrudeIShape.cpp  ExtrudeIShape.hpp  FilletIShape.cpp  FilletIShape.hpp  IAxis.cpp  IAxis.hpp  ICurve.cpp  ICurve.hpp  ICurve2D.cpp  ICurve2D.hpp  ICurveData.cpp  ICurveData.hpp  IFrame.cpp  IFrame.hpp  IFrame2D.cpp  IFrame2D.hpp  IMesh.cpp  IMesh.hpp  IMeshControl.cpp  IMeshControl.hpp  IMeshErrors.hpp  IPoint.cpp  IPoint.hpp  IPoint2D.cpp  IPoint2D.hpp  IShape.cpp  IShape.hpp  IShapeErrors.hpp  ISurface.cpp  ISurface.hpp  ITransform.cpp  ITransform.hpp  IVector.cpp  IVector.hpp  (+16 more)
tests/: test_geometry.py  test_topology.py
